<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/slide_screen_card_view"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E8D4D4">

            <ImageView
                android:layout_marginTop="16dp"
                android:id="@+id/iv1"
                android:scaleType="centerCrop"
                android:layout_width="156dp"
                android:layout_height="161dp"
                android:layout_marginStart="32dp"
                android:src="@drawable/placeholder_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvCategory1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:textColor="@color/black"
                tools:text="@string/category_1"
                app:layout_constraintStart_toEndOf="@id/iv1"
                app:layout_constraintTop_toTopOf="@id/iv1" />

            <TextView
                android:id="@+id/tvColor1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                tools:text="@string/color_1"
                app:layout_constraintStart_toEndOf="@id/iv1"
                app:layout_constraintTop_toBottomOf="@id/tvCategory1" />

            <ImageView
                android:id="@+id/iv2"
                android:layout_width="159dp"
                android:layout_height="158dp"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder_image"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv1"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvCategory2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"
                tools:text="@string/category_2"
                app:layout_constraintStart_toEndOf="@id/iv2"
                app:layout_constraintTop_toTopOf="@id/iv2" />

            <TextView
                android:id="@+id/tvColor2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                tools:text="@string/color_2"
                app:layout_constraintStart_toEndOf="@id/iv2"
                app:layout_constraintTop_toBottomOf="@id/tvCategory2" />

            <ImageView
                android:id="@+id/iv3"
                android:layout_width="163dp"
                android:layout_height="156dp"
                android:src="@drawable/placeholder_image"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv2"
                android:contentDescription="@string/add_to_favorite" />

            <TextView
                android:id="@+id/tvCategory3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"
                tools:text="@string/category_3"
                app:layout_constraintStart_toEndOf="@id/iv3"
                app:layout_constraintTop_toTopOf="@id/iv3" />

            <TextView
                android:id="@+id/tvColor3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                tools:text="@string/color_3"
                app:layout_constraintStart_toEndOf="@id/iv3"
                app:layout_constraintTop_toBottomOf="@id/tvCategory3" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/button_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:foregroundGravity="bottom"
                app:fabSize="normal"
                app:srcCompat="@drawable/ic_baseline_favorite_border_white_24px"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/add_favorite" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>