<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UploadActivity"
    >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

                <TextView
                    android:id="@+id/tv_upload_clothes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_clothes"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@id/tv_upload_clothes"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textSize="14sp"
                    android:text="@string/five_clothes"/>

                <Button
                    android:id="@+id/btn_outerwear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outerwear"
                    app:layout_constraintTop_toBottomOf="@id/tv_description"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="16dp"
                    android:drawableEnd="@drawable/ic_baseline_arrow_right_white_24dp"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_outerwear"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_outerwear"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/btn_innerwear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/innerwear"
                    app:layout_constraintTop_toBottomOf="@id/rv_outerwear"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="16dp"
                    android:drawableEnd="@drawable/ic_baseline_arrow_right_white_24dp"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_innerwear"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_innerwear"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/btn_pants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pants"
                    app:layout_constraintTop_toBottomOf="@id/rv_innerwear"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="16dp"
                    android:drawableEnd="@drawable/ic_baseline_arrow_right_white_24dp"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_pants"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_pants"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_pants"
                    android:text="@string/submit"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>