<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OuterwearActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_upload_clothes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_outerwear"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/tv_upload_clothes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="14sp"
            android:text="@string/five_items"/>


        <ImageView
            android:id="@+id/iv1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv2"
            android:src="@drawable/ic_place_holder"/>

        <ImageView
            android:id="@+id/iv2"
            android:tag="image2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="@id/iv1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_place_holder"/>

        <ImageView
            android:id="@+id/iv3"
            android:tag="image1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="@id/iv1"
            app:layout_constraintStart_toEndOf="@id/iv2"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_place_holder"/>

        <LinearLayout
            android:id="@+id/llBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/iv2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/iv4"
                android:tag="image4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="8dp"
                android:scaleType="fitCenter"
                tools:srcCompat="@drawable/ic_place_holder"/>
            <ImageView
                android:id="@+id/iv5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_place_holder"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llBottom"
            android:text="@string/upload"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>